bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (( (a<=0 && b>=0)||(a>=0 && b<=0)) || (negative && (a<=0 && b<=0))){
  ^